# rl

./: Dockerfile  Mock実装改良完了レポート.md  analyze_expert_trajectories.py  comprehensive_analysis_report.py  rl_irl_consistency_analysis.py  temporal_analysis.py  強化学習システム包括分析レポート.md  現状実装状況詳細レポート.md
gerrit-retention/: .env.example  .gitignore  .txt  AGENTS.md  CLAUDE.md  Dockerfile  EXPERIMENT_DESIGN_SUMMARY.md  Makefile  PROJECT_OVERVIEW.md  QUICKSTART_SERVER.md  README.md  README_TEMPORAL_IRL.md  SERVER_EXECUTION_GUIDE.md  STATUS_2025-11-04.md  batch_eval.sh  docker-compose.yml  memo.sh  pattern1_history_length.sh  pattern2_train_distance.sh  pyproject.toml  requirements_api.txt  rf_cross_eval_log.txt  setup.py  simple_api.py  training_window_analysis_summary.md  データソース拡張計画.md
gerrit-retention/analysis/: README.md  reviewer_diversity_analysis.py
gerrit-retention/api/: README.md  __init__.py  main.py
gerrit-retention/config/: README.md  api_config.yaml  logging_config.yaml  model_config.yaml
gerrit-retention/configs/: README.md  comprehensive_retention_config.yaml  deployment_config.yaml  development.yaml  gerrit_config.yaml  irl_feature_registry.yaml  logging_config.yaml  production.yaml  retention_analysis_config.yaml  retention_config.yaml  rl_config.yaml  stress_config.yaml  testing.yaml  visualization_config.yaml
gerrit-retention/data/: README.md  extended_test_data.json  pipeline_history.json  sample_test_data.json
gerrit-retention/data_processing/: README.md  __init__.py  extract_action_match.py  extract_reviwer.py
gerrit-retention/docker/: .env.example  Dockerfile  Dockerfile.simple  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  healthcheck.sh  init-db.sql  nginx.conf  prometheus.yml  redis.conf
gerrit-retention/docs/: .tex  .txt  8X8_MATRIX_EVALUATION_GUIDE.md  ACTION_FEATURES_EXPLAINED.md  DATA_PROCESSING_DETAILS.md  FINAL_IMPLEMENTATION_REPORT.md  IRL_CROSS_EVAL_REPRODUCTION.md  IRL_完全実装ガイド_データ抽出から予測まで.md  IRL分析の解釈_報酬関数と行動パターン.md  IRL学習と予測の完全ガイド.md  IRL最終設計_学習期間内完結版.md  IRL設計変更の要約.md  LSTM時系列学習の修正.md  PATH_SIMILARITY_METHODS.md  Precision-Recall不均衡の分析.md  Python版クロス評価実行ガイド.md  TRIANGULAR_CROSS_EVALUATION_EXPERIMENT.md  enhanced_features_implementation_summary.md  features_preprocessing_map.md  implementation_plan_multilabel.md  irl_future_directions.md  irl_rl_replay_evaluation.md  irl_rl_status_20251001.md  irl_temporal_window_redesign.md  long_term_contributor_strategy.md  memo.md  nova_two_year_experiment_ja.md  nova単一プロジェクト実行記録.md  poster_style_evaluation_guide.md  prediction_method_summary.md  repo_directory_guide.md  retention_irl_period_alignment.md  rl_summary.md  status_2025-09-29.md  temporal_irl_evaluation.md  visualization_system_summary.md  クロス評価実行ガイド.md  クロス評価手法詳細.md  スライディングウィンドウIRL実行記録.md  スライディングウィンドウ特徴量分析レポート.md  (+14 more)
gerrit-retention/evaluation/: README.md
gerrit-retention/examples/: README.md  ab_testing_example.py  build_eval_from_changes.py  build_eval_from_review_requests.py  irl_feature_integration_example.py  real_data_evaluate.py  retention_auc_demo.py  test_gerrit_connection.py  training_pipeline_example.py  visualization_example.py
gerrit-retention/importants/: COMPARISON_REPORT_2020_vs_2022.md  IRL設計と実験結果サマリー.md  SIGSE_PRESENTATION_QA_GUIDE.md  fixed_population_results_summary.md  matrix_4x4_summary.md  quarterly_evaluation_summary.md
gerrit-retention/memo/: DROPOUT_EXPLANATION.md  IRL_COOKING_ANALOGY_EXPLANATION.md  IRL_LEARNING_MECHANISM.md  IRL_MODEL_PRESENTATION_GUIDE.md  IRL学習メカニズムの解説.md  REWARD_BASED_PREDICTION_APPROACH.md  TASK_REJECTION_LEARNING.md  TRAINING_VS_TEST_PERFORMANCE.md  TRAIN_EVAL_SPLIT_EXPLANATION.md  TWO_AUC_METRICS.md  lstm_state_static_issue.md
gerrit-retention/pipelines/: __init__.py  data_pipeline.py  training_pipeline.py
gerrit-retention/scripts/: README.md  __init__.py  advanced_rl_system.py  align_future_and_gap_predictions.py  analyze_prediction_vs_reality.py  analyze_retention_prediction_alignment.py  analyze_training_window_effect.py  batch_retention_threshold_scan.py  build_time_series_dataset_from_virtual_snapshots.py  collect_real_data.py  connect_real_gerrit.py  convert_sequences_to_jsonl.py  create_retention_data_from_sequences.py  debug_rl_system.py  enhanced_developer_analysis.py  evaluate_future_window_retention.py  evaluate_retention_probabilities.py  evaluate_reviewer_irl_holdout.py  evaluate_workload_aware_probabilities.py  expand_data_sources.py  extract_irl_sequences.py  extract_reviewer_sequences.py  filter_reward_analysis_features.py  final_rl_demo.py  generate_invited_task_negatives.py  generate_reviewer_sequences.py  generate_sample_data.py  generate_sample_review_data.py  generate_visualizations.py  implement_real_rl.py  individual_developer_analysis.py  irl_rl_retention_demo.py  predict_next_authored_change.py  prediction_accuracy_analyzer.py  reconstruct_snapshot_labels.py  replace_mock_implementations.py  rl_task_optimizer.py  run_accuracy_improvement.py  (+21 more)
(+1216 files in other folders)
